infrastructure/terragrunt/aws/network/security-groups.tf
resource "aws_security_group" "wordpress_ecs" {
  # checkov:skip=CKV2_AWS_5: False positive, this is attached in the ecs module.
  name        = "wordpress_ecs"
  description = "WordPress ECS - ingress from load balancer, egress to database"
  vpc_id      = module.wordpress_vpc.vpc_id

  tags = var.core_tags
}

resource "aws_security_group_rule" "wordpress_ecs_ingress_lb" {
  description              = "Security group rule for WordPress ingress from load balancer"
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.wordpress_ecs.id
  source_security_group_id = aws_security_group.wordpress_load_balancer.id
}

# This could be locked down to only the IP address ranges required for egress (e.g. List Manager IP range)
resource "aws_security_group_rule" "wordpress_ecs_egress_internet" {
  description       = "Security group rule for WordPress egress to internet"
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.wordpress_ecs.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "wordpress_ecs_egress_efs" {
  count = var.enable_efs ? 1 : 0

  description              = "Security group rule for WordPress egress to EFS"
  type                     = "egress"
  from_port                = 2049
  to_port                  = 2049
  protocol                 = "tcp"
  security_group_id        = aws_security_group.wordpress_ecs.id
  source_security_group_id = aws_security_group.wordpress_efs[0].id
}

data "aws_ec2_managed_prefix_list" "cloudfront" {
  name = "com.amazonaws.global.cloudfront.origin-facing"
}

data "aws_subnet" "wordpress_private_subnet" {
  count = 3
  id    = tolist(module.wordpress_vpc.private_subnet_ids)[count.index]
}

resource "aws_security_group" "wordpress_load_balancer" {
  # checkov:skip=CKV2_AWS_5: False positive, attached in the "load-balancer" module.
  name        = "wordpress-load-balancer"
  description = "WordPress load balancer - ingress from internet, egress to ECS"
  vpc_id      = module.wordpress_vpc.vpc_id

  ingress {
    protocol        = "tcp"
    from_port       = 443
    to_port         = 443
    prefix_list_ids = [data.aws_ec2_managed_prefix_list.cloudfront.id]
    description     = "Requests from users via CloudFront"
  }

  dynamic "egress" {
    for_each = [for s in toset(data.aws_subnet.wordpress_private_subnet) : {
      cidr = s.cidr_block
      zone = s.availability_zone
    }]

    content {
      protocol    = "tcp"
      from_port   = 443
      to_port     = 443
      cidr_blocks = [egress.value.cidr]
      description = "Traffic to ECS cluster"
    }
  }

  tags = var.core_tags
}

resource "aws_security_group" "wordpress_efs" {
  count = var.enable_efs ? 1 : 0

  # checkov:skip=CKV2_AWS_5: False positive, attached in the "ecs" module.
  name        = "wordpress_efs"
  description = "Wordpress EFS access"
  vpc_id      = module.wordpress_vpc.vpc_id

  tags = var.core_tags
}

resource "aws_security_group_rule" "efs_ingress_wordpress_ecs" {
  count = var.enable_efs ? 1 : 0

  description              = "Security group rule for EFS ingress from WordPress"
  type                     = "ingress"
  from_port                = 2049
  to_port                  = 2049
  protocol                 = "tcp"
  security_group_id        = aws_security_group.wordpress_efs[0].id
  source_security_group_id = aws_security_group.wordpress_ecs.id
}

resource "aws_security_group" "ecs_events_lambda" {
  # checkov:skip=CKV2_AWS_5: False positive, attached in the "ecs" module.
  name        = "ecs_events_lambda"
  description = "ECS Lambda - ingress/egress for VPC endpoints"
  vpc_id      = module.wordpress_vpc.vpc_id

  tags = var.core_tags
}
